clear the code and code improve

--- a/index.pug
+++ b/index.pug
@@ -23,6 +23,9 @@ block content
   script(type='text/javascript' src='./js/ityped.js')
   script(type='text/javascript').
     window.ityped.init(document.querySelector('.ityped'),{
+    typeSpeed:  125,
+    startDelay: 500,
+    backDelay:  1200,
     cursorChar: ".",
     strings : ['Liberty','Privacy','Security', 'Solidarity']
     })
