--- a/mercode.org/css/stiller.css
+++ b/mercode.org/css/stiller.css
@@ -1,53 +1,49 @@
-body
-{
+body {
   margin-top: 100px;
   text-align: center;
   padding: 0;
   font-family: 'Raleway', sans-serif;
-  background: black;
+  background: #212121;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
 }
 
-header
-{
+header {
   z-index: 100;
-  position:fixed;
+  position: fixed;
   top: 0;
-  left:0;
+  left: 0;
   padding: 0 100px;
-  background: linear-gradient(45deg,rgba(255,29,17,0.9),rgba(255,162,6,0.9));
+  background: linear-gradient(45deg, rgba(255, 29, 17, 0.9), rgba(255, 162, 6, 0.9));
   width: 100%;
   box-sizing: border-box;
 }
-header .logo
-{
+
+header .logo {
   height: 51px;
   line-height: 51px;
   float: left;
 }
-header nav
-{
-  float:right;
+
+header nav {
+  float: right;
 }
-header nav ul
-{
+
+header nav ul {
   margin: 0;
   padding: 0;
   display: flex;
 }
-header nav ul li
-{
+
+header nav ul li {
   list-style: none;
   color: #fff;
   font-weight: 1000;
-
 }
-header nav ul li a
-{
+
+header nav ul li a {
   height: 50px;
   line-height: 50px;
   padding: 0 20px;
@@ -55,8 +51,7 @@ header nav ul li a
   text-decoration: none;
 }
 
-.menu-toggle
-{
+.menu-toggle {
     color: #fff;
     padding: 20px 20px;
     float: right;
@@ -65,75 +60,98 @@ header nav ul li a
     cursor: pointer;
     display: none;
 }
-@media (max-width: 1050px)
-{
-      header
-    {
-      padding: 0 20px;
-      max-height: 65px;
-    }
-     header .logo
-    {
-      padding-top: 6px;
-    }
-    .menu-toggle
-    {
-      display: block;
-      padding-top: 0px;
-    }
-    header nav
-    {
 
-      position: fixed;
-      width: 100%;
-      /*height: calc(100vb - 50px);*/
-      background: linear-gradient(45deg,rgba(255,29,17,0.9),rgba(255,162,6,0.9));
-      top: 65px;
-      Left: -100%;
-      transition: 0,5s;
+@media (max-width: 1050px) {
+  header {
+    padding: 0 20px;
+    max-height: 65px;
+  }
 
-    }
-    header nav.active
-    {
-      Left: 0;
-    }
-    header nav ul
-    {
-      display: block;
-      text-align: center;
+  header .logo {
+    padding-top: 6px;
+  }
 
-    }
+  .menu-toggle {
+    display: block;
+    padding-top: 0px;
+  }
 
+  header nav {
+    position: fixed;
+    width: 100%;
+    /*height: calc(100vb - 50px);*/
+    background: linear-gradient(45deg, rgba(255, 29, 17, 0.9), rgba(255, 162, 6, 0.9));
+    top: 65px;
+    Left: -100%;
+    transition: 0,5s;
+  }
+
+  header nav.active {
+    Left: 0;
+  }
+
+  header nav ul {
+    display: block;
+    text-align: center;
+  }
 }
 
 a.button {
-    border-color: #ff4d0d;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 22px;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: #ff4d0d;
-    background: none;
-    border-radius: 8px;
-    text-align: center;
-    cursor: pointer;
-    font-weight: bold;
-    text-decoration: none;
-    width: 150px;
-    font-size: 18px;
-    margin: 20px 20px;
-
+  border-color: #ff4d0d;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 22px;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: #ff4d0d;
+  background: none;
+  border-radius: 8px;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+  text-decoration: none;
+  width: 150px;
+  font-size: 18px;
+  margin: 20px 20px;
 }
 
 a.button:hover {
   font-size: 20px;
   color: black;
-  background: linear-gradient(45deg,rgba(255,29,17,0.9),rgba(255,162,6,0.9));
+  background: linear-gradient(45deg, rgba(255, 29, 17, 0.9), rgba(255, 162, 6, 0.9));
   border: none;
   transition: all 0.2s linear;
 }
+
+a.1buton {
+  text-decoration: none;
+  font-size: 22px;
+  color: #FF8000;
+}
+
+button:hover, header ul li a:hover {
+  color: black;
+  transition: all 0.2s linear;
+}
+
+.hos {
+  font-size: 60px;
+  font-weight: 1000;
+  text-align: center;
+  color: white;
+  /*background: -webkit-linear-gradient(#000428, #004e92);*/
+}
+h1 {
+
+}
+h3 {
+  font-size: 25;
+  font-size: bold;
+  text-align: center;
+  color: white;
+}
+
 a.1buton {
     text-decoration: none;
     font-size: 22px;
@@ -270,6 +288,18 @@ a.button2:hover {
     width: 80%;
   }
 }
+
+@media (max-width: 560px) {
+  .hos {
+    font-size: 35px;
+  }
+
+  h3 {
+    font-size: 15px;
+    margin: 15px 10px 10px;
+  }
+}
+
 .footer {
     position: fixed;
     left: 0;
@@ -279,12 +309,14 @@ a.button2:hover {
     color: white;
     text-align: center;
 }
-.footer-copyright{
+
+.footer-copyright {
     width: 100%;
     height: auto;
     margin: auto;
 }
-.footer-copyright p{
+
+.footer-copyright p {
   margin: 10px 10px;
   padding-bottom: 5px;
   text-align: center;
@@ -292,37 +324,56 @@ a.button2:hover {
   font-weight: bold;
   display: none;
 }
+
 .footer-sosyal-ikon {
     width: 100%;
     height: auto;
     margin: auto;
 }
 
-.footer-sosyal-ikon ul{
+.footer-sosyal-ikon ul {
     margin: 0px;
     padding-bottom: 5px;
     text-align: center;
 }
-.footer-sosyal-ikon ul li{
+
+.footer-sosyal-ikon ul li {
   display: inline-block;
   width: 50px;
   height: 10px;
   margin: 10px 10px;
 }
-.footer-sosyal-ikon ul li a{
+
+.footer-sosyal-ikon ul li a {
   font-size: 27px;
   color: white;
 }
-.footer-sosyal-ikon ul li a:hover{
+
+.footer-sosyal-ikon ul li a:hover {
   color: black;
   transition: all 0.2s linear;
 }
-@media (min-width: 625px) {
-  .footer-sosyal-ikon ul{
+
+@media (min-width: 692px) {
+  .footer-sosyal-ikon ul {
     float: right;
   }
-  .footer-copyright p{
+
+  .footer-copyright p {
     display: block;
     float: left;
+  }
+}
+
+@media (max-width: 335px) {
+  .footer-sosyal-ikon ul li {
+    display: inline-block;
+    width: 50px;
+    height: 10px;
+    margin: 9px 2px;
+  }
+
+  .footer-sosyal-ikon ul li a {
+    font-size: 20px;
   }
 }
