--- a/mercode.org/css/iletisimbody.css
+++ b/mercode.org/css/iletisimbody.css
@@ -1,15 +1,12 @@
-body
-{
-  margin-top: 100px;
-  text-align: center;
-  padding: 0;
-  font-family: 'Raleway', sans-serif;
-  background: linear-gradient(45deg,rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.9)), url(../assets/arkaplan7.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
+body {
+  margin-top: 100px !important;
+  text-align: center !important;
+  padding: 0 !important;
+  background: linear-gradient(45deg,rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.9)), url(../assets/arkaplan7.jpg) no-repeat center center fixed !important;
+  -webkit-background-size: cover !important;
+  -moz-background-size: cover !important;
+  -o-background-size: cover !important;
+  background-size: cover !important;
 }
 form {
   max-width: 500px;
