--- a/about.pug
+++ b/about.pug
@@ -9,7 +9,7 @@ block content
       .konu
         h2 Welcome to Mercode!
         p(style='font-size: 14px;')
-          | Mercode is a non-profit open source software foundation which gathers coders, hackers, activists, makers and designers worldwide. Also it is the Turkish name of planet Mercury, the first planet of the solar system.
+          | Mercode is a free libre open source community which gathers coders, hackers, activists, makers and designers worldwide. Also it is the Turkish name of planet Mercury, the first planet of the solar system.
         a.button(href='#')
           i.fa.fa-play(aria-hidden='true')
           |  Watch Video
