--- a/index.pug
+++ b/index.pug
@@ -8,7 +8,7 @@ block content
     | Mercode: 
     span.ityped
   h3
-    | Mercode is a Free Open Source Software Community aimed to create decentralized apps and Linux distros.
+    | Mercode is a Free Libre Open Source Community aimed to create decentralized apps and Linux distros.
   a.button.animated.pulse.delay-1s(href='join.html')
     i.fa.fa-handshake-o(aria-hidden='true')
     |   Join Us
