--- a/mercode.org/css/language-switcher.css
+++ b/mercode.org/css/language-switcher.css
@@ -12,10 +12,10 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background: black;
-  border-color: #ff4d0d;
+  background: #fff;
+  /*border-color: #ff4d0d;
   border-style: solid;
-  border-width: 2px;
+  border-width: 2px;*/
   border-bottom-left-radius: 14px;
   border-bottom-right-radius: 14px;
   min-width: 160px;
@@ -25,15 +25,19 @@
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: white;
+  color: #ff6600;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  font-weight: bold;
+  font-size: 15px;
+  transition: 0.2s;
 }
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-	color: rgba(200,200,200,0.7);
+	color: black;
+  transition: 0.2s;
 }
 
 /* Show the dropdown menu on hover */
