--- a/main.pug
+++ b/main.pug
@@ -70,7 +70,7 @@ body
   block footer
     <div class="footer">
       <div class="footer-copyright">
-        <p>Copyleft 2019 Mercode - GPLv3</p>
+        <p>Copyleft 2019-2020 Mercode - GPLv3</p>
       </div>
       <div class="footer-sosyal-ikon">
         <div class="footer-sosyal-ikon">
