--- a/mercode.org/css/stiller.css
+++ b/mercode.org/css/stiller.css
@@ -1,4 +1,5 @@
 body {
+  width: 100%
   margin-top: 100px;
   text-align: center;
   padding: 0;
@@ -8,6 +9,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  padding: 0 1.5rem;
 }
 
 header {
@@ -40,6 +42,7 @@ header nav ul {
 header nav ul li {
   list-style: none;
   color: #fff;
+  font-size: 14px;
   font-weight: 1000;
 }
 
@@ -54,6 +57,7 @@ header nav ul li a {
 
 header nav ul li a:hover {
   color: black;
+	text-shadow: 0 0 3px rgba(0,0,0,0.5);
   transition: 0.2s;
 }
 
@@ -120,6 +124,7 @@ a.button {
   width: 150px;
   font-size: 18px;
   margin: 20px 20px;
+	text-shadow: 0 0 3px rgba(0,0,0,0.7);
 }
 
 a.button:hover {
