add meta theme-color

--- a/main.pug
+++ b/main.pug
@@ -1,6 +1,7 @@
 <!doctype html>
 head
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="theme-color" content="#ff4d0d" />
   <meta charset="utf-8">
   <title>Mercode</title>
 
