add new game and add game pull config to package.json

--- a/mercode.org/css/cards.css
+++ b/mercode.org/css/cards.css
@@ -80,3 +80,11 @@ a.button {
 	background-size: cover;
 	background-position: center;
 }
+
+.three {
+	background: linear-gradient(45deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../assets/dwarfs.gif');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
