--- a/games.pug
+++ b/games.pug
@@ -18,5 +18,12 @@ block content
         <h2>Dwarfs2019</h2>
           <a class="button animated pulse delay-1s" href="games/dwarfs2019/index.html"><i class="fa fa-gamepad" aria-hidden="true"></i>  Play</a>
       </div>
+      <div class="box three">
+       <div class="date">
+       </div>
+       <h2>Dwarfs2019</h2>
+       <a class="button animated pulse delay-1s" href="games/flappux/index.html"><i class="fa fa-gamepad" aria-hidden="true"></i>  Play</a>
+      </div>
+
     </div>
   </div>
